syntax = "proto3";
package claudie;

import "spec/manifest.proto";
import "spec/nodepool.proto";

option go_package = "proto/pb";

enum IdType {
  NAME = 0;
}

// Save
message SaveWorkflowStateRequest {
  string configName = 1;
  string clusterName = 2;
  spec.Workflow workflow = 3;
}

message SaveWorkflowStateResponse {}
message SaveConfigRequest { 
  spec.Config config = 1;
}
message SaveConfigResponse { 
  spec.Config config = 1;
}

// Get
//message GetConfigRequest {}
//message GetConfigResponse {
//  spec.Config config = 1;
//}

// Get
message GetTaskRequest {}
message GetTaskResponse {
  spec.TaskEvent event = 1;
}

message GetAllConfigsRequest {}
message GetAllConfigsResponse {
  repeated spec.Config configs = 1;
}

message GetConfigFromDBRequest {
  string id = 1; 
  IdType type = 2;
}
message GetConfigFromDBResponse {
  spec.Config config = 1;
}


// Delete
message CboxDeleteConfigRequest {
  string id = 1;
  IdType type = 2;
}
message CboxDeleteConfigResponse {
  string id = 1;
}

// Update
message UpdateNodepoolRequest {
  string projectName = 1;
  string clusterName = 2;
  spec.NodePool nodepool = 3;
}
message UpdateNodepoolResponse {}

service ContextBoxService {
  // SaveConfigOperator saves the config parsed by claudie-operator.
  rpc SaveConfigOperator(SaveConfigRequest) returns (SaveConfigResponse);
  // SaveConfigScheduler saves the config parsed by Scheduler.
  rpc SaveConfigScheduler(SaveConfigRequest) returns (SaveConfigResponse);
  // SaveConfigBuilder saves the config parsed by Builder.
  rpc SaveConfigBuilder(SaveConfigRequest) returns (SaveConfigResponse);
  // SaveWorkflowState saves the information about the state of the config.
  rpc SaveWorkflowState(SaveWorkflowStateRequest) returns (SaveWorkflowStateResponse);
  // GetConfigFromDB gets a single config from the database.
  rpc GetConfigFromDB(GetConfigFromDBRequest) returns (GetConfigFromDBResponse);
  // GetConfigScheduler gets a config from Scheduler's queue of pending configs.
//  rpc GetConfigScheduler(GetConfigRequest) returns (GetConfigResponse);
  // GetTask returns the next task from the task queue, if any.
  rpc GetTask(GetTaskRequest) returns (GetTaskResponse);
  // GetAllConfigs gets all configs from the database.
  rpc GetAllConfigs(GetAllConfigsRequest) returns (GetAllConfigsResponse);
  // DeleteConfig sets the manifest to null, effectively forcing the deletion of the infrastructure
  // defined by the manifest on the very next config (diff) check.
  rpc DeleteConfig(CboxDeleteConfigRequest) returns (CboxDeleteConfigResponse);
  // DeleteConfigFromDB deletes the config from the database.
  rpc DeleteConfigFromDB(CboxDeleteConfigRequest) returns (CboxDeleteConfigResponse);
  // UpdateNodepool updates specific nodepool from the config. Used mainly for autoscaling.
  rpc UpdateNodepool(UpdateNodepoolRequest) returns (UpdateNodepoolResponse);
}